[tool.poetry]
name = "uniswapv2mevminimize"
version = "0.1.0"
description = ""
authors = ["ZigaMr <ziga.mrzljak93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
web3 = "^5.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
